fix(styles): reduce word-spacing for some fonts to prevent box breaking in some cases

--- a/app/styles/page-firefox.css
+++ b/app/styles/page-firefox.css
@@ -119,6 +119,7 @@
 
 body.persian-twitter-vazir {
   font-family: Vazir, "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+  word-spacing: -1px;
 }
 
 body.persian-twitter-samim {
@@ -135,6 +136,7 @@ body.persian-twitter-sahel {
 
 body.persian-twitter-parastoo {
   font-family: Parastoo, "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+  word-spacing: -1px;
 }
 
 body.persian-twitter-gandom {
@@ -143,6 +145,7 @@ body.persian-twitter-gandom {
 
 body.persian-twitter-tanha {
   font-family: Tanha, "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+  word-spacing: -1px;
 }
 
 body.persian-twitter-behdad {
@@ -171,6 +174,7 @@ body.persian-twitter-notonaskh {
 
 body.persian-twitter-iraniansans {
   font-family: IranianSans, "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+  word-spacing: -1px;
 }
 
 blockquote, dl, dd, h1, h2, h3, h4, h5, h6, figure, p, pre {
